[package]
name = "rs-win"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies.windows]
version = "0.42.0"
features = [
  "implement",
  "Win32_Foundation",
  "Win32_UI_Shell",
]

# [build-dependencies.windows-bindgen]
# version = "0.42.0"
